# Gab-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.txt  ShaderCompiler.cmake  vcpkg-configuration.json  vcpkg.json
AnitoPCG-Manuscript/: main.aux  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc
DefaultAssets/3D/: pillar.mtl  roof.mtl  wall.mtl  wall.obj.gbe  window.mtl
DefaultAssets/3D/builder/: wall.mtl
DefaultAssets/3D/default/: capsule.obj.gbe  horizontal_axis_triangle.obj.gbe
DefaultAssets/3D/test/: armadillo.obj.gbe  lucy.obj.gbe  (+1 more)
DefaultAssets/Materials/: grid.mat.gbe  line.mat.gbe  lit.mat.gbe  shadow.mat.gbe  simple.mat.gbe  skybox_gradient.mat.gbe  wireframe.mat.gbe
DefaultAssets/Scenes/: 2blocks  default.level  default_withsmall.level  t.mtl  test
DefaultAssets/Shaders/: 3d.vert  gizmo.frag  grid.frag  id.frag  id.vert  unlit.frag
Ext/: MikkTSpace.cmake  ShaderCompiler.cmake
Ext/AnitoBuilder/: AnitoBuilderExtension.cpp  AnitoBuilderExtension.h  BuilderBlock.cpp  BuilderBlock.h  BuilderBlockFace.cpp  BuilderBlockFace.h  BuilderBlockRow.cpp  BuilderBlockRow.h  BuilderBlockSet.cpp  BuilderBlockSet.h  BuilderBlockUnit.cpp  BuilderBlockUnit.h  CMakeLists.txt
Ext/AnitoBuilder/gui/: AnitoBuilderWindow.cpp  AnitoBuilderWindow.h
Ext/GabVulkan/: CMakeLists.txt  Objects.h  VulkanDictionarySingleton.h
Ext/bgfx-gab/: CMakeLists.txt
Ext/bgfx-gab/bgfx-gab/: ScreenUtil.cpp  ScreenUtil.h  bgfx_gab.h  forwardrenderer.cpp  forwardrenderer.h
Ext/bgfx-gab/bgfx-gab/impl/: TextureBlend.cpp  TextureBlend.h  TexturePainter.cpp  TexturePainter.h
Ext/bgfx-gab/bgfx-gab/util/: TexturePainter.cpp  TexturePainter.h
Ext/bgfx-imgui/: CMakeLists.txt
Ext/bgfx-imgui/bgfx-imgui/: imgui_impl_bgfx.cpp
Ext/bgfx-utils/: CMakeLists.txt  entry_patch.cpp
For Submission/src/: GDgrapProk.cpp
GDPHYSX/: GDgrapProk.cpp  GDgrapProk.vcxproj  GDgrapProk.vcxproj.filters
Rayo-GP/src/: README.txt
Sample Projects/: editor_layout.ini
Sample Projects/AnitoBuilder/: root.gbe  test.mtl
Unity/: SceneConverter.cs  SceneConverterEditor.cs  SceneConverterMenuItems.cs
Unity/Editor/: SceneConverterEditor.cs  SceneConverterMenuItems.cs
Unity/Scripts/: SceneConverter.cs
src/: CMakeLists.txt  gab-engine.cpp
src/Asset/: BaseAsset.h  CMakeLists.txt  gbe_asset.h
src/Audio/: AudioLoader.cpp  AudioLoader.h
src/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
src/Editor/Ext_Gui/: AnitoBuilderWindow.cpp  AnitoBuilderWindow.h  GdparcmWindow.cpp  GdparcmWindow.h
src/Editor/Gui/: ConsoleWindow.cpp  ConsoleWindow.h  ContextMenus.cpp  ContextMenus.h  CreditsWindow.cpp  CreditsWindow.h  GizmoLayer.cpp  GizmoLayer.h  GuiElement.cpp  GuiElement.h  GuiWindow.cpp  GuiWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  ImageDebugger.cpp  ImageDebugger.h  InspectorData.h  InspectorWindow.cpp  InspectorWindow.h  LightExplorer.cpp  LightExplorer.h  MenuBar.cpp  MenuBar.h  SpawnWindow.cpp  SpawnWindow.h  StateWindow.cpp  StateWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/Editor/Gui/Utility/: AssetPickerPopup.h  DragDrop.h  DrawIconSwitch.h
src/Editor/Gui/Windows/: ConsoleWindow.h  CreditsWindow.cpp  CreditsWindow.h  GuiWindow.cpp  GuiWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  ImageDebugger.cpp  InspectorWindow.cpp  InspectorWindow.h  LightExplorer.cpp  LightExplorer.h  ProjectBrowser.cpp  ProjectBrowser.h  SpawnWindow.h  StateWindow.cpp  TexturePainterWindow.cpp  TexturePainterWindow.h  ViewportWindow.cpp  ViewportWindow.h
src/Editor/Serialization/: HierarchySerializer.h  SerializedObject.h
src/Editor/Utility/: CreateFunctions.cpp  CreateFunctions.h  FileDialogue.h  HierarchySerializer.cpp  HierarchySerializer.h  ModelExport.cpp  ModelExport.h  ProjectLoader.cpp  ProjectLoader.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  gbe_engine.h
src/Ext/AnitoBuilder/: AnitoBuilder.cpp  AnitoBuilder.h  CMakeLists.txt
src/Ext/AnitoBuilderWrapper/: AnitoBuilderWrapper.cpp  AnitoBuilderWrapper.h  BuilderBlock.cpp  BuilderBlock.h  BuilderBlockSet.cpp  BuilderBlockSet.h  CMakeLists.txt
src/Ext/GabVulkan/: CMakeLists.txt  Objects.h  VulkanObject.h  VulkanObjectSingleton.h
src/Ext/GabVulkan/Components/: Renderer.h
src/Ext/GabVulkan/Components/DeferredRenderer/: DeferredRenderer.h  Lighting.h  ShadowMap.h
src/Ext/GabVulkan/Components/ForwardRenderer/: ForwardRenderer.h
src/Ext/GabVulkan/Components/Targets/: DepthColorTarget.cpp  DepthColorTarget.h  Target.h
src/Ext/GabVulkan/Objects/: Buffer.cpp  Buffer.h  CommandBuffer.h  CommandBufferSingle.h  CommandPool.cpp  CommandPool.h  DescriptorPool.h  Framebuffer.h  Image.h  ImageView.h  Instance.h  PhysicalDevice.cpp  PhysicalDevice.h  RenderPass.h  Sampler.h  Surface.h  SwapChain.h  VirtualDevice.cpp  VirtualDevice.h
src/Ext/GabVulkan/Objects/Structures/: AttachmentDictionary.h  AttachmentReferencePasser.h  FrameSyncronizationObject.h  ImagePair.h
src/Ext/GabVulkan/Utility/: DebugCallback.h  DebugObjectName.cpp  MemoryBarrier.h
src/Ext/Gdparcm/: CMakeLists.txt  MeshAsync.cpp  MeshAsync.h
src/Ext/bgfx-imgui/: CMakeLists.txt
src/Extension/: CMakeLists.txt  Extension.cpp  Extension.h
src/Graphics/: CMakeLists.txt  RenderPipeline.cpp  RenderPipeline.h  Renderer.h  gbe_graphics.h
src/Graphics/AssetLoaders/: MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/Graphics/Data/: CallInstance.h  DrawCall.cpp  DrawCall.h  Light.h
src/Graphics/util/: TextureBlend.cpp  TextureBlend.h  TexturePainter.cpp  TexturePainter.h
src/Math/: CMakeLists.txt  Constants.h  Matrix3.h  Matrix4.h  Quaternion.cpp  Quaternion.h  TrackedVariable.h  Vector2.cpp  Vector2.h  Vector2Int.h  Vector3.cpp  Vector3.h  gbe_math.h
src/Physics/: CMakeLists.txt  PhysicsBody.cpp  PhysicsBody.h  PhysicsPipeline.cpp  PhysicsPipeline.h  PhysicsWorld.cpp  PhysicsWorld.h  Raycast.cpp  Raycast.h  RaycastAll.cpp  Rigidbody.cpp  Rigidbody.h  TriggerRigidBody.cpp  TriggerRigidBody.h  gbe_physics.h
src/Window/: Window.cpp  Window.h
(+317 files in other folders)
